--- a/src/styles/scss/components/_searchbar.scss
+++ b/src/styles/scss/components/_searchbar.scss
@@ -4,7 +4,8 @@
   position: sticky;
   // top: 70px;
   top: 68px;
-  z-index: 99999;
+  // z-index: 99999;
+  z-index: 9999;
   width: 80vw;
   margin: auto;
 
